Fix some layout problems for hybrid project

--- a/hybrid/public/stylesheets/chat.css
+++ b/hybrid/public/stylesheets/chat.css
@@ -8,8 +8,9 @@
 
 
 #chat-input-group {
-    position: fixed;
-    bottom: 0;
+    position: absolute;
+    bottom: 0;  
+    left: 0;
     width: 100vw;
     padding-left: 5px;
     padding-right: 5px;
